Fix #1187 Camel View - Browse panel button alignment off

--- a/hawtio-web/src/main/webapp/css/site-base.css
+++ b/hawtio-web/src/main/webapp/css/site-base.css
@@ -4140,3 +4140,7 @@ img.nodeIcon:hover {
 .auth-form > form > input {
   margin-bottom: 0;
 }
+
+.slideout-body .btn-group {
+  line-height: normal;
+}
